# Blokus2

./: AllShapes.h  Blokus  Blokus.cbp  Board.cpp  Board.h  CMakeCache.txt  CMakeLists.txt  Cell.cpp  Cell.h  Clock.cpp  Clock.h  Command.sh  Commands.cpp  Commands.h  GlobalVars.h  Makefile  Move.cpp  Move.h  Piece.cpp  Piece.h  PieceSet.cpp  PieceSet.h  Random.h  RandomMoveGen.cpp  RandomMoveGen.h  cmake_install.cmake  judge.txt  judge2.txt  judgeCommands.txt  main.cpp  output.blksgf
.cmake/api/v1/reply/: cache-v2-2e2becc768e5cec8ab4c.json  cmakeFiles-v1-88673d14a38c3225c349.json  codemodel-v2-40606aaa792d5037cdc4.json  index-2024-07-05T11-29-55-0206.json
games/: game-1.blksgf  game-10.blksgf  game-100.blksgf  game-11.blksgf  game-12.blksgf  game-13.blksgf  game-14.blksgf  game-15.blksgf  game-16.blksgf  game-17.blksgf  game-18.blksgf  game-19.blksgf  game-2.blksgf  game-20.blksgf  game-21.blksgf  game-22.blksgf  game-23.blksgf  game-24.blksgf  game-25.blksgf  game-26.blksgf  game-27.blksgf  game-28.blksgf  game-29.blksgf  game-3.blksgf  game-30.blksgf  game-31.blksgf  game-32.blksgf  game-33.blksgf  game-34.blksgf  game-35.blksgf  game-36.blksgf  game-37.blksgf  game-38.blksgf  game-39.blksgf  game-4.blksgf  game-40.blksgf  game-41.blksgf  game-42.blksgf  game-43.blksgf  game-44.blksgf  (+60 more)
